--- a/BESHOP/OpeningView3.xib
+++ b/BESHOP/OpeningView3.xib
@@ -16,24 +16,23 @@
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="6Cy-w4-Sad">
                     <rect key="frame" x="93" y="122" width="188" height="45"/>
                 </imageView>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JeR-eS-xL5">
-                    <rect key="frame" x="144" y="534" width="87" height="30"/>
-                    <state key="normal" title="START">
-                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="text_3.png" translatesAutoresizingMaskIntoConstraints="NO" id="8h6-63-s56">
+                    <rect key="frame" x="88" y="289" width="198" height="55"/>
+                </imageView>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FoQ-Kh-aHm">
+                    <rect key="frame" x="42" y="500" width="290" height="51"/>
+                    <state key="normal" title="Button" image="register_button.png">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="erJ-ON-KYz">
-                    <rect key="frame" x="80" y="572" width="215" height="75"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="stb-mG-u0y">
+                    <rect key="frame" x="76" y="574" width="222" height="43"/>
                     <string key="text">使用を開始した時点で
 利用規約に同意したものと見なします</string>
                     <fontDescription key="fontDescription" name="HiraKakuProN-W3" family="Hiragino Kaku Gothic ProN" pointSize="12"/>
                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
+                    <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="text_3.png" translatesAutoresizingMaskIntoConstraints="NO" id="8h6-63-s56">
-                    <rect key="frame" x="88" y="289" width="198" height="55"/>
-                </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
@@ -44,6 +43,7 @@
     </objects>
     <resources>
         <image name="logo.png" width="377" height="91"/>
+        <image name="register_button.png" width="525" height="92"/>
         <image name="text_3.png" width="471" height="117"/>
         <image name="tutorial_3_bg.jpg" width="719" height="1280"/>
     </resources>
